fix alignment

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -59,7 +59,7 @@ div.wrapper {float:left; margin:0; padding:0; }
 /* Don't change anything below here unless you know what you're doing */
 
 /* Tabbed nav */
-.coda-nav {width:836px!important; position:absolute; z-index:200; top:0;}
+.coda-nav {width:845px!important; position:absolute; z-index:200; top:0;}
 /* Tab nav */
 .coda-nav ul { width:100%; float:left;}
 .coda-nav ul li a.current { color:#333333; background:url('/images/bkg_current_option.png') repeat-x; height:44px; width:auto;}
@@ -104,7 +104,7 @@ div#back_right {position:fixed; top:3px; right:0; height:100%; width:180px; back
 
 ul#menu {z-index:5;}
 ul#menu li.tab1 {display:none;}
-ul#menu li.tab2 {float:left; width:510px !important; z-index:100;}
+ul#menu li.tab2 {float:left; width:521px !important; z-index:100;}
 ul#menu li.tab2 a {color:#0A0000; font-size:15px;}
 
 div.footer {position:absolute; top:750px; width:810px; height:auto;}
